# MandelbrotCUDA-Python

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  TestMandelbrot.py  build.sh
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt
cpp/include/: IMandelbrot.hpp  MandelbrotCPU.hpp  MandelbrotCUDA.hpp
cpp/src/: MandelbrotCPU.cpp  MandelbrotCUDA.cu
python-bindings/: IMandelbrot.cpp  Mandelbrot.cpp  MandelbrotCUDA.cpp
